Working on AddUser and AddGroup

--- a/Client/UserControls/ChatItem.xaml
+++ b/Client/UserControls/ChatItem.xaml
@@ -32,6 +32,13 @@
             <Setter Property="Width" Value="15"/>
 
             <Style.Triggers>
+                <DataTrigger Binding="{Binding Path=ActivityVisibility, ElementName=ui}" Value="Hidden">
+                    <Setter Property="Visibility" Value="Hidden"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding Path=ActivityVisibility, ElementName=ui}" Value="Visible">
+                    <Setter Property="Visibility" Value="Visible"/>
+                </DataTrigger>
+                
                 <DataTrigger Binding="{Binding Path=Activity, ElementName=ui}" Value="Online">
                     <Setter Property="Fill" Value="Green"/>
                 </DataTrigger>
