--- a/Client/Views/UC2.xaml
+++ b/Client/Views/UC2.xaml
@@ -1,14 +1,14 @@
-﻿<Window x:Class="Client.Views.Window2"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Title="Window2" Height="500" Width="600">
-    <Window.Resources>
+﻿<UserControl x:Class="Client.Views.UC2"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             mc:Ignorable="d" 
+             d:DesignHeight="500" d:DesignWidth="600">
+    <UserControl.Resources>
         <ResourceDictionary Source="/WindowResources\ChatsDictionary.xaml"/>
-    </Window.Resources>
-
+    </UserControl.Resources>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -33,6 +33,6 @@
 
         <Button Grid.Row="2" Grid.Column="0" Content="Show more" Width="200" MaxHeight="100" MaxWidth="300" Command="{Binding Path=ShowMoreCommand}"/>
         <Button Grid.Row="2" Grid.Column="1" Content="Add Friend" Width="200" MaxHeight="100" MaxWidth="300" Command="{Binding Path=AddCommand}"/>
-        
     </Grid>
-</Window>
+
+</UserControl>
