--- a/Client/Views/AddUserUC.xaml
+++ b/Client/Views/AddUserUC.xaml
@@ -1,14 +1,15 @@
-﻿<UserControl x:Class="Client.Views.UC2"
+﻿<UserControl x:Class="Client.Views.AddUserUC"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:metro ="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              mc:Ignorable="d" 
-             d:DesignHeight="500" d:DesignWidth="600">
+             d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <ResourceDictionary Source="/WindowResources\ChatsDictionary.xaml"/>
     </UserControl.Resources>
-    
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -20,19 +21,25 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Visibility="Hidden" Text="{Binding Path=Name}"/>
+        <TextBox Grid.Row="0" Background="LightGoldenrodYellow"
+                   Grid.ColumnSpan="2"
+                   metro:TextBoxHelper.Watermark="Enter name for chat room"
+                   metro:TextBoxHelper.ClearTextButton="True"
+                   Text="{Binding Path=ChatName}"
+                   FontSize="25">
+        </TextBox>
 
         <ListView 
             Grid.Row="1"
             Grid.ColumnSpan="2"
-            ItemsSource="{Binding Path=Users}"
+            ItemsSource="{Binding Path=AllUsers}"
             ItemTemplate="{StaticResource ChatDataTemplate}"
             ItemContainerStyle="{StaticResource ChatListViewItemStyle}"
             SelectedItem="{Binding Path=SelectedUser}">
         </ListView>
 
-        <Button Grid.Row="2" Grid.Column="0" Content="Show more" Width="200" MaxHeight="100" MaxWidth="300" Command="{Binding Path=ShowMoreCommand}"/>
-        <Button Grid.Row="2" Grid.Column="1" Content="Add Friend" Width="200" MaxHeight="100" MaxWidth="300" Command="{Binding Path=AddCommand}"/>
+        <Button Grid.Row="2" Grid.Column="0" Content="Show more" Width="200" MaxHeight="100" MaxWidth="300" Command="{Binding ShowMoreCommand}"/>
+        <Button Grid.Row="2" Grid.Column="1" Content="Add Friend" Width="200" MaxHeight="100" MaxWidth="300" Command="{Binding AddUserCommand}"/>
     </Grid>
 
 </UserControl>
