--- a/Client/WindowResources/MessageDicitionary.xaml
+++ b/Client/WindowResources/MessageDicitionary.xaml
@@ -10,6 +10,23 @@
     <u:PathToName x:Key="PathToName"/>
     <u:TypeConverter x:Key="TypeConverter"/>
 
+    <Style x:Key="OnlineEllipseStyle" TargetType="Ellipse">
+        <Setter Property="Height" Value="15"/>
+        <Setter Property="Width" Value="15"/>
+        <Setter Property="VerticalAlignment" Value="Bottom"/>
+        <Setter Property="HorizontalAlignment" Value="Right"/>
+        <Setter Property="Stroke" Value="Black"/>
+        <Setter Property="StrokeThickness" Value="2"/>
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding Path=User.IsOnline}" Value="True">
+                <Setter Property="Fill" Value="Green"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Path=User.IsOnline}" Value="False">
+                <Setter Property="Fill" Value="Red"/>
+            </DataTrigger>
+        </Style.Triggers>
+    </Style>
+
     <ControlTemplate x:Key="PlayToggle" TargetType="Button">
         <icons:PackIconMaterial Name="icon" Width="30" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left"/>
 
@@ -26,6 +43,81 @@
     </ControlTemplate>
 
     <DataTemplate x:Key="TextDataTemplate">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Grid x:Name="mainGrid">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition x:Name="mainGridCol1" Width="60" MaxWidth="60"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition x:Name="mainGridRow1" Height="60" MaxHeight="60"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+                <Grid x:Name="gridEllipse" Grid.Row="0" Grid.Column="0">
+                    <Ellipse Width="50" Height="50" StrokeThickness="3" Stroke="Black">
+                        <Ellipse.Fill>
+                            <ImageBrush ImageSource="{Binding Path=User.Avatar}"/>
+                        </Ellipse.Fill>
+                    </Ellipse>
+                    <Ellipse Style="{StaticResource OnlineEllipseStyle}"/>
+                </Grid>
+
+                <Border x:Name="border" Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" BorderBrush="AliceBlue" BorderThickness="4" CornerRadius="15" Margin="10,20,0,0">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition x:Name="row1" Height="0"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="20"/>
+                        </Grid.RowDefinitions>
+
+                        <TextBlock Grid.Row="0" x:Name="group" Text="{Binding Path=Login}" Visibility="Hidden" Margin="15,0" FontSize="12" Foreground="Green"/>
+                        <TextBlock Grid.Row="1" Margin="5" Text="{Binding Path=Message.Text}" TextWrapping="Wrap" Foreground="Black" FontSize="18"/>
+                        <TextBlock Grid.Row="2" Margin="10, 2" Text="{Binding Path=Message.Date, StringFormat={}{0:hh:mm}}" Foreground="DarkSlateGray" FontSize="12"/>
+                    </Grid>
+                </Border>
+            </Grid>
+        </Grid>
+
+        <DataTemplate.Triggers>
+            <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:UserMessage}">
+                <Setter TargetName="mainGrid" Property="Grid.Column" Value="1"/>
+                <Setter TargetName="mainGridCol1" Property="Width" Value="0"/>
+                <Setter TargetName="mainGridRow1" Property="Height" Value="0"/>
+                <Setter TargetName="border" Property="Background" Value="#EF44F2"/>
+                <Setter TargetName="gridEllipse" Property="Visibility" Value="Collapsed"/>
+                <Setter TargetName="border" Property="HorizontalAlignment" Value="Right"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:SourceMessage}">
+                <Setter TargetName="mainGrid" Property="Grid.Column" Value="0"/>
+                <Setter TargetName="gridEllipse" Property="Visibility" Value="Collapsed"/>
+                <Setter TargetName="mainGridCol1" Property="Width" Value="0"/>
+                <Setter TargetName="mainGridRow1" Property="Height" Value="0"/>
+                <Setter TargetName="border" Property="Background" Value="#D8BDD9"/>
+                <Setter TargetName="border" Property="HorizontalAlignment" Value="Left"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:GroupMessage}">
+                <Setter TargetName="mainGrid" Property="Grid.Column" Value="0"/>
+                <Setter TargetName="border" Property="Background" Value="#D8BDD9"/>
+                <Setter TargetName="border" Property="HorizontalAlignment" Value="Left"/>
+                <Setter TargetName="row1" Property="Height" Value="18"/>
+                <Setter TargetName="group" Property="Visibility" Value="Visible"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:SystemMessage}">
+                <Setter TargetName="mainGrid" Property="Grid.ColumnSpan" Value="2"/>
+                <Setter TargetName="gridEllipse" Property="Visibility" Value="Collapsed"/>
+                <Setter TargetName="border" Property="Background" Value="#A6A2A6"/>
+                <Setter TargetName="border" Property="HorizontalAlignment" Value="Center"/>
+            </DataTrigger>
+        </DataTemplate.Triggers>
+    </DataTemplate>
+
+    <!--<DataTemplate x:Key="TextDataTemplate">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -71,7 +163,7 @@
                 <Setter TargetName="border" Property="HorizontalAlignment" Value="Center"/>
             </DataTrigger>
         </DataTemplate.Triggers>
-    </DataTemplate>
+    </DataTemplate>-->
 
     <DataTemplate x:Key="ImageDataTemplate">
         <Grid>
@@ -90,6 +182,9 @@
 
                     <TextBlock Grid.Row="0" x:Name="group" Text="{Binding Path=Login}" Visibility="Hidden" Margin="15, 0" FontSize="12" Foreground="Green"/>
                     <Image Grid.Row="1" Source="{Binding Path=Message.Path}" Stretch="Fill"/>
+                    <Button Grid.Row="1" Grid.Column="0" Width="50" Height="50" Content="Download"
+                            Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=UserControl}, Path=DataContext.DownloadFileCommand}"
+                            CommandParameter="{Binding Path=Message.StreamId}"/>
                     <TextBlock Grid.Row="2" Margin="10, 2" Text="{Binding Path=Message.Date, StringFormat={}{0:hh:mm}}" Foreground="DarkSlateGray" FontSize="12"/>
                 </Grid>
             </Border>
