--- a/Client/WindowResources/MessageDicitionary.xaml
+++ b/Client/WindowResources/MessageDicitionary.xaml
@@ -59,7 +59,7 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-                <Grid x:Name="gridEllipse" Grid.Row="0" Grid.Column="0">
+                <Grid x:Name="ellipseGrid" Grid.Row="0" Grid.Column="0">
                     <Ellipse Width="50" Height="50" StrokeThickness="3" Stroke="Black">
                         <Ellipse.Fill>
                             <ImageBrush ImageSource="{Binding Path=User.Avatar}"/>
@@ -90,12 +90,12 @@
                 <Setter TargetName="mainGridCol1" Property="Width" Value="0"/>
                 <Setter TargetName="mainGridRow1" Property="Height" Value="0"/>
                 <Setter TargetName="border" Property="Background" Value="#EF44F2"/>
-                <Setter TargetName="gridEllipse" Property="Visibility" Value="Collapsed"/>
+                <Setter TargetName="ellipseGrid" Property="Visibility" Value="Collapsed"/>
                 <Setter TargetName="border" Property="HorizontalAlignment" Value="Right"/>
             </DataTrigger>
             <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:SourceMessage}">
                 <Setter TargetName="mainGrid" Property="Grid.Column" Value="0"/>
-                <Setter TargetName="gridEllipse" Property="Visibility" Value="Collapsed"/>
+                <Setter TargetName="ellipseGrid" Property="Visibility" Value="Collapsed"/>
                 <Setter TargetName="mainGridCol1" Property="Width" Value="0"/>
                 <Setter TargetName="mainGridRow1" Property="Height" Value="0"/>
                 <Setter TargetName="border" Property="Background" Value="#D8BDD9"/>
@@ -110,7 +110,7 @@
             </DataTrigger>
             <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:SystemMessage}">
                 <Setter TargetName="mainGrid" Property="Grid.ColumnSpan" Value="2"/>
-                <Setter TargetName="gridEllipse" Property="Visibility" Value="Collapsed"/>
+                <Setter TargetName="ellipseGrid" Property="Visibility" Value="Collapsed"/>
                 <Setter TargetName="border" Property="Background" Value="#A6A2A6"/>
                 <Setter TargetName="border" Property="HorizontalAlignment" Value="Center"/>
             </DataTrigger>
@@ -168,6 +168,95 @@
     <DataTemplate x:Key="ImageDataTemplate">
         <Grid>
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Grid x:Name="mainGrid" ShowGridLines="True">
+                <Grid.RowDefinitions>
+                    <RowDefinition x:Name="mainGridRow1" Height="60" MaxHeight="60"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition x:Name="mainGridCol1" Width="60" MaxWidth="60"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <Grid x:Name="ellipseGrid" Grid.Row="0" Grid.Column="0">
+                    <Ellipse Width="50" Height="50" StrokeThickness="3" Stroke="Black">
+                        <Ellipse.Fill>
+                            <ImageBrush ImageSource="{Binding Path=User.Avatar}"/>
+                        </Ellipse.Fill>
+                    </Ellipse>
+                    <Ellipse Style="{StaticResource OnlineEllipseStyle}"/>
+                </Grid>
+
+                <Border x:Name="border" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2"
+                        Margin="10,20,0,0"
+                        HorizontalAlignment="Left"
+                        MaxHeight="300" MaxWidth="300" Width="{Binding ElementName=border, Path=Height}"
+                        BorderBrush="AliceBlue" BorderThickness="4">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition x:Name="row1" Height="0"/>
+                            <RowDefinition x:Name="row2" MinHeight="340"/>
+                            <RowDefinition Height="20"/>
+                        </Grid.RowDefinitions>
+
+                        <TextBlock Grid.Row="0" x:Name="group" Text="{Binding Path=Login}" Visibility="Hidden" Margin="15, 0" FontSize="12" Foreground="Green"/>
+                        <Image Grid.Row="1" Source="{Binding Path=Message.Path}" Stretch="Fill"/>
+                        <Button x:Name="loader" Content="Download" 
+                                Grid.Row="1" Grid.Column="0"
+                                Width="50" Height="50" 
+                                Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=UserControl}, Path=DataContext.DownloadFileCommand}"
+                                CommandParameter="{Binding Path=Message.StreamId}">
+                        </Button>
+                        <TextBlock Grid.Row="2" Margin="10, 2" Text="{Binding Path=Message.Date, StringFormat={}{0:hh:mm}}" Foreground="DarkSlateGray" FontSize="12"/>
+                    </Grid>
+                </Border>
+            </Grid>
+        </Grid>
+
+        <DataTemplate.Triggers>
+            <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:UserMessage}">
+                <Setter TargetName="mainGrid" Property="Grid.Column" Value="1"/>
+                <Setter TargetName="mainGridCol1" Property="Width" Value="0"/>
+                <Setter TargetName="mainGridRow1" Property="Height" Value="0"/>
+                <Setter TargetName="border" Property="Background" Value="#EF44F2"/>
+                <Setter TargetName="ellipseGrid" Property="Visibility" Value="Collapsed"/>
+                <Setter TargetName="border" Property="HorizontalAlignment" Value="Right"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:SourceMessage}">
+                <Setter TargetName="mainGrid" Property="Grid.Column" Value="0"/>
+                <Setter TargetName="ellipseGrid" Property="Visibility" Value="Collapsed"/>
+                <Setter TargetName="mainGridCol1" Property="Width" Value="0"/>
+                <Setter TargetName="mainGridRow1" Property="Height" Value="0"/>
+                <Setter TargetName="border" Property="Background" Value="#D8BDD9"/>
+                <Setter TargetName="border" Property="HorizontalAlignment" Value="Left"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:GroupMessage}">
+                <Setter TargetName="mainGrid" Property="Grid.Column" Value="0"/>
+                <Setter TargetName="border" Property="Background" Value="#D8BDD9"/>
+                <Setter TargetName="border" Property="HorizontalAlignment" Value="Left"/>
+                <Setter TargetName="row1" Property="Height" Value="18"/>
+                <Setter TargetName="group" Property="Visibility" Value="Visible"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:SystemMessage}">
+                <Setter TargetName="mainGrid" Property="Grid.ColumnSpan" Value="2"/>
+                <Setter TargetName="ellipseGrid" Property="Visibility" Value="Collapsed"/>
+                <Setter TargetName="border" Property="Background" Value="#A6A2A6"/>
+                <Setter TargetName="border" Property="HorizontalAlignment" Value="Center"/>
+            </DataTrigger>
+            
+            <DataTrigger Binding="{Binding Path=Message.IsLoaded}" Value="True">
+                <Setter TargetName="loader" Property="Visibility" Value="Hidden"/>
+            </DataTrigger>
+        </DataTemplate.Triggers>
+    </DataTemplate>
+
+    <!--<DataTemplate x:Key="ImageDataTemplate">
+        <Grid>
+            <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
@@ -215,7 +304,60 @@
                 <Setter TargetName="border" Property="HorizontalAlignment" Value="Center"/>
             </DataTrigger>
         </DataTemplate.Triggers>
-    </DataTemplate>
+    </DataTemplate>-->
+
+    <!--<DataTemplate x:Key="FileDataTemplate">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
+            <Grid x:Name="mainGrid">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="60" MaxHeight="60"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="60" MaxWidth="60"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <Grid x:Name="ellipseGrid" Grid.Row="0" Grid.Column="0">
+                    <Ellipse Width="50" Height="50" StrokeThickness="3" Stroke="Black">
+                        <Ellipse.Fill>
+                            <ImageBrush ImageSource="{Binding Path=User.Avatar}"/>
+                        </Ellipse.Fill>
+                    </Ellipse>
+                    <Ellipse Style="{StaticResource OnlineEllipseStyle}"/>
+                </Grid>
+
+                <Border x:Name="border"
+                        Grid.Row="0" Grid.Column="1" Grid.RowSpan="2"
+                        Margin="10,20,0,0"
+                        MinWidth="250" Height="80" 
+                        BorderBrush="AliceBlue" BorderThickness="3" CornerRadius="15">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition x:Name="row1"/>
+                            <RowDefinition Height="50"/>
+                            <RowDefinition Height="20"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="4*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" x:Name="group" Text="{Binding Path=Login}" Visibility="Hidden" Margin="15, 0" FontSize="12" Foreground="Green"/>
+                        <Image Grid.Row="1" Grid.Column="0" x:Name="icon" Source="/images/file.png" Width="50" Height="50"/>
+                        <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding Path=Message.Path, Converter={StaticResource PathToName}}" FontSize="20" Margin="20,0,10,0" VerticalAlignment="Center"/>
+                        <TextBlock Grid.Row="2" Grid.Column="0" Margin="10, 2" Text="{Binding Path=Message.Date, StringFormat={}{0:hh:mm}}" Foreground="DarkSlateGray" FontSize="12"/>
+                    </Grid>
+                </Border>
+
+            </Grid>
+        </Grid>
+    </DataTemplate>-->
 
     <DataTemplate x:Key="FileDataTemplate">
         <Border x:Name="border" MinWidth="250" Height="80" BorderBrush="AliceBlue" BorderThickness="3" CornerRadius="15">
@@ -282,6 +424,10 @@
                 <Setter TargetName="border" Property="Background" Value="#A6A2A6"/>
                 <Setter TargetName="border" Property="HorizontalAlignment" Value="Center"/>
             </DataTrigger>
+
+            <!--<DataTrigger Binding="{Binding Path=Message.IsLoaded}" Value="True">
+                <Setter TargetName="loader" Property="Visibility" Value="Hidden"/>
+            </DataTrigger>-->
         </DataTemplate.Triggers>
     </DataTemplate>
 
