--- a/Client/Views/UCChat.xaml
+++ b/Client/Views/UCChat.xaml
@@ -72,10 +72,9 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <TextBlock Grid.Row="0" Grid.Column="0" Text="{Binding Path=IsWritingText, StringFormat={}{0} is writting...}" FontSize="25" Panel.ZIndex="1" Margin="10,-40"/>
+            <TextBlock Grid.Row="0" Grid.Column="0" Visibility="{Binding Path=Chat.IsWriting}" Text="{Binding Path=IsWritingText, StringFormat={}{0} is writting...}" FontSize="25" Panel.ZIndex="1" Margin="0,-41,20,70"/>
 
-            <TextBox x:Name="text"
-                     Text="{Binding Path=Text, Mode=TwoWay}"
+            <TextBox Text="{Binding Path=DataContext.MessageText}"
                      Grid.Column="0"
                      Background="DarkSlateGray" Foreground="White" FontSize="30" TextWrapping="Wrap"
                      ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled">
