--- a/Client/WindowResources/MessageDicitionary.xaml
+++ b/Client/WindowResources/MessageDicitionary.xaml
@@ -131,6 +131,14 @@
                 <Setter TargetName="border" Property="Background" Value="#D8BDD9"/>
                 <Setter TargetName="border" Property="HorizontalAlignment" Value="Left"/>
             </DataTrigger>
+            <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:SessionSendedMessage}">
+                <Setter TargetName="mainGrid" Property="Grid.Column" Value="1"/>
+                <Setter TargetName="mainGridCol1" Property="Width" Value="0"/>
+                <Setter TargetName="mainGridRow1" Property="Height" Value="0"/>
+                <Setter TargetName="border" Property="Background" Value="#EF44F2"/>
+                <Setter TargetName="ellipseGrid" Property="Visibility" Value="Collapsed"/>
+                <Setter TargetName="border" Property="HorizontalAlignment" Value="Right"/>
+            </DataTrigger>
             <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:GroupMessage}">
                 <Setter TargetName="mainGrid" Property="Grid.Column" Value="0"/>
                 <Setter TargetName="border" Property="Background" Value="#D8BDD9"/>
@@ -176,7 +184,7 @@
 
                 <Border x:Name="border" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Margin="10,20,0,0" HorizontalAlignment="Left" MaxHeight="300" MaxWidth="300" Width="{Binding ElementName=border, Path=Height}" BorderBrush="AliceBlue" BorderThickness="3">
                     <Grid>
-                        <Image Source="{Binding Path=Message.Path}" Stretch="Fill"/>
+                        <Image Source="{Binding Path=Message.Bitmap}" Stretch="Fill"/>
                         <Button x:Name="loader"
                                 Width="50" Height="50"
                                 VerticalAlignment="Center" HorizontalAlignment="Center"
@@ -206,6 +214,14 @@
                 <Setter TargetName="mainGridRow1" Property="Height" Value="0"/>
                 <Setter TargetName="border" Property="Background" Value="#D8BDD9"/>
                 <Setter TargetName="border" Property="HorizontalAlignment" Value="Left"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:SessionSendedMessage}">
+                <Setter TargetName="mainGrid" Property="Grid.Column" Value="1"/>
+                <Setter TargetName="mainGridCol1" Property="Width" Value="0"/>
+                <Setter TargetName="mainGridRow1" Property="Height" Value="0"/>
+                <Setter TargetName="border" Property="Background" Value="#EF44F2"/>
+                <Setter TargetName="ellipseGrid" Property="Visibility" Value="Collapsed"/>
+                <Setter TargetName="border" Property="HorizontalAlignment" Value="Right"/>
             </DataTrigger>
             <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:GroupMessage}">
                 <Setter TargetName="mainGrid" Property="Grid.Column" Value="0"/>
@@ -252,9 +268,9 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
 
-                        <Button x:Name="loader" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Width="35" Height="35" HorizontalContentAlignment="Center" Cursor="Hand" Template="{StaticResource DownloadButton}"/>
+                        <Button x:Name="loader" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Width="35" Height="35" HorizontalContentAlignment="Center" Cursor="Hand" Template="{StaticResource DownloadButton}" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=UserControl}, Path=DataContext.DownloadFileCommand}" CommandParameter="{Binding Path=Message}"/>
                         <Image Grid.Column="1" x:Name="icon" Source="/images/file.png" Width="40" Height="40" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                        <TextBlock Grid.Column="2" Text="{Binding Path=Message.Path, Converter={StaticResource PathToName}}" FontSize="20" Margin="5,0,0,0" VerticalAlignment="Center"/>
+                        <TextBlock Grid.Column="2" Text="{Binding Path=Message.FileName}" FontSize="20" Margin="5,0,0,0" VerticalAlignment="Center"/>
                         <TextBlock Grid.Column="0" Grid.ColumnSpan="3" Text="{Binding Path=Message.Date, StringFormat={}{0:hh:mm}}" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,15,0" Foreground="DarkSlateGray" FontSize="12"/>
                     </Grid>
                 </Border>
@@ -278,6 +294,14 @@
                 <Setter TargetName="border" Property="Background" Value="#D8BDD9"/>
                 <Setter TargetName="border" Property="HorizontalAlignment" Value="Left"/>
             </DataTrigger>
+            <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:SessionSendedMessage}">
+                <Setter TargetName="mainGrid" Property="Grid.Column" Value="1"/>
+                <Setter TargetName="mainGridCol1" Property="Width" Value="0"/>
+                <Setter TargetName="mainGridRow1" Property="Height" Value="0"/>
+                <Setter TargetName="border" Property="Background" Value="#EF44F2"/>
+                <Setter TargetName="ellipseGrid" Property="Visibility" Value="Collapsed"/>
+                <Setter TargetName="border" Property="HorizontalAlignment" Value="Right"/>
+            </DataTrigger>
             <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:GroupMessage}">
                 <Setter TargetName="mainGrid" Property="Grid.Column" Value="0"/>
                 <Setter TargetName="group" Property="Visibility" Value="Visible"/>
@@ -289,28 +313,28 @@
                 <Setter TargetName="col1" Property="Width" Value="0"/>
             </DataTrigger>
 
-            <DataTrigger Binding="{Binding Path=Message.Path, Converter={StaticResource PathToExtension}}" Value=".txt">
+            <DataTrigger Binding="{Binding Path=Message.FileName, Converter={StaticResource PathToExtension}}" Value=".txt">
                 <Setter TargetName="icon" Property="Source" Value="/images/txt.png"/>
             </DataTrigger>
-            <DataTrigger Binding="{Binding Path=Message.Path, Converter={StaticResource PathToExtension}}" Value=".pdf">
+            <DataTrigger Binding="{Binding Path=Message.FileName, Converter={StaticResource PathToExtension}}" Value=".pdf">
                 <Setter TargetName="icon" Property="Source" Value="/images/pdf.png"/>
             </DataTrigger>
-            <DataTrigger Binding="{Binding Path=Message.Path, Converter={StaticResource PathToExtension}}" Value=".pptx">
+            <DataTrigger Binding="{Binding Path=Message.FileName, Converter={StaticResource PathToExtension}}" Value=".pptx">
                 <Setter TargetName="icon" Property="Source" Value="/images/ppt.png"/>
             </DataTrigger>
-            <DataTrigger Binding="{Binding Path=Message.Path, Converter={StaticResource PathToExtension}}" Value=".ppt">
+            <DataTrigger Binding="{Binding Path=Message.FileName, Converter={StaticResource PathToExtension}}" Value=".ppt">
                 <Setter TargetName="icon" Property="Source" Value="/images/ppt.png"/>
             </DataTrigger>
-            <DataTrigger Binding="{Binding Path=Message.Path, Converter={StaticResource PathToExtension}}" Value=".doc">
+            <DataTrigger Binding="{Binding Path=Message.FileName, Converter={StaticResource PathToExtension}}" Value=".doc">
                 <Setter TargetName="icon" Property="Source" Value="/images/doc.png"/>
             </DataTrigger>
-            <DataTrigger Binding="{Binding Path=Message.Path, Converter={StaticResource PathToExtension}}" Value=".docx">
+            <DataTrigger Binding="{Binding Path=Message.FileName, Converter={StaticResource PathToExtension}}" Value=".docx">
                 <Setter TargetName="icon" Property="Source" Value="/images/doc.png"/>
             </DataTrigger>
-            <DataTrigger Binding="{Binding Path=Message.Path, Converter={StaticResource PathToExtension}}" Value=".xls">
+            <DataTrigger Binding="{Binding Path=Message.FileName, Converter={StaticResource PathToExtension}}" Value=".xls">
                 <Setter TargetName="icon" Property="Source" Value="/images/xls.png"/>
             </DataTrigger>
-            <DataTrigger Binding="{Binding Path=Message.Path, Converter={StaticResource PathToExtension}}" Value=".zip">
+            <DataTrigger Binding="{Binding Path=Message.FileName, Converter={StaticResource PathToExtension}}" Value=".zip">
                 <Setter TargetName="icon" Property="Source" Value="/images/zip.png"/>
             </DataTrigger>
         </DataTemplate.Triggers>
@@ -400,6 +424,14 @@
                 <Setter TargetName="border" Property="Background" Value="#D8BDD9"/>
                 <Setter TargetName="border" Property="HorizontalAlignment" Value="Left"/>
                 <Setter TargetName="group" Property="Visibility" Value="Visible"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding BindsDirectlyToSource=True, Converter={StaticResource TypeConverter}}" Value="{x:Type models:SessionSendedMessage}">
+                <Setter TargetName="mainGrid" Property="Grid.Column" Value="1"/>
+                <Setter TargetName="mainGridCol1" Property="Width" Value="0"/>
+                <Setter TargetName="mainGridRow1" Property="Height" Value="0"/>
+                <Setter TargetName="border" Property="Background" Value="#EF44F2"/>
+                <Setter TargetName="ellipseGrid" Property="Visibility" Value="Collapsed"/>
+                <Setter TargetName="border" Property="HorizontalAlignment" Value="Right"/>
             </DataTrigger>
         </DataTemplate.Triggers>
     </DataTemplate>
