Place Resource folder into Debug folder !!! Place Settings folder into Debug folder !!!
ADDED
ValidathionRule for checking login and password
Settings (Wallpapers, ringtons, message load count)
Settigs data is stored in xml file settings.xml
User settings are stored in file user-settings.xml
Drag Drop for CreateGroupUC
SliderCheckBoxButton

UPDATED
SliderRadioButton

--- a/Client/UserControls/PasswordWarning.xaml
+++ b/Client/UserControls/PasswordWarning.xaml
@@ -8,31 +8,27 @@
              mc:Ignorable="d" 
              x:Name="uc"
              d:DesignHeight="50" d:DesignWidth="500">
-    <Grid>
+
+    <Grid x:Name="grid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="30"/>
+            <ColumnDefinition Width="0"/>
         </Grid.ColumnDefinitions>
 
-        <TextBox Grid.Column="0" 
+        <TextBox x:Name="text"
+                 Grid.Column="0"
+                 Text="{Binding ElementName=uc, Path=Text}"
                  controls:TextBoxHelper.Watermark="Password"
                  controls:TextBoxHelper.ClearTextButton="True"
                  FontSize="{Binding ElementName=uc, Path=FontSize}">
-            <TextBox.Text>
-                <Binding ElementName="uc" Path="Text">
-                    <Binding.ValidationRules>
-                        
-                    </Binding.ValidationRules>
-                </Binding>
-            </TextBox.Text>
         </TextBox>
 
-
-        <icons:PackIconMaterialDesign Grid.Column="1"
+        <icons:PackIconMaterialDesign x:Name="icon"                                          
+                                      Grid.Column="1"
                                       Kind="Warning" Foreground="DarkRed"
                                       Padding="5"
-                                      Width="30" Height="30"
-                                      VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                                      Width="{Binding ElementName=uc, Path=Height}" Height="{Binding ElementName=uc, Path=Height}"
+                                      VerticalAlignment="Center" HorizontalAlignment="Center" ToolTip="{Binding ElementName=uc, Path=ErrorText}">
+        </icons:PackIconMaterialDesign>
     </Grid>
-
 </UserControl>
