--- a/Client/UserControls/LoginWarning.xaml
+++ b/Client/UserControls/LoginWarning.xaml
@@ -5,58 +5,34 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:icons ="http://metro.mahapps.com/winfx/xaml/iconpacks"
              xmlns:controls ="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-             xmlns:utility="clr-namespace:Client.Utility"
              mc:Ignorable="d" 
              x:Name="uc"
              d:DesignHeight="50" d:DesignWidth="400">
-    <UserControl.Resources>
-        <!--<Style TargetType="Grid">
-            <Style.Triggers>
-                <DataTrigger Binding="{Binding ElementName=text, Path=Validation.HasError}" Value="True">
-                    <Setter TargetName="{Binding ElementName=icon, Path=Kind}" Property="Kind" Value="Warning"/>
-                </DataTrigger>
-            </Style.Triggers>
-        </Style>-->
 
-        <!--<Style TargetType="TextBox">
-            <Style.Triggers>
-                <Trigger Property="Validation.HasError" Value="True">
-                    <Setter TargetName="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=icons:PackIconMaterialDesign}}" Property="Kind" Value="Warning"/>
-                </Trigger>
-            </Style.Triggers>
-        </Style>-->
-    </UserControl.Resources>
-    
-    <Grid>
+    <Grid x:Name="grid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="30"/>
+            <ColumnDefinition Width="0"/>
         </Grid.ColumnDefinitions>
 
         <TextBox x:Name="text"
                  Grid.Column="0"
+                 Text="{Binding ElementName=uc, Path=Text}"
                  controls:TextBoxHelper.Watermark="Login"
                  controls:TextBoxHelper.ClearTextButton="True"
-                 FontSize="{Binding ElementName=uc, Path=FontSize}">
-            <TextBox.Text>
-                <Binding ElementName="uc" Path="Text">
-                    <Binding.ValidationRules>
-                        <utility:AuthorizationRules/>
-                    </Binding.ValidationRules>
-                </Binding>
-            </TextBox.Text>
+                 FontSize="{Binding ElementName=uc, Path=FontSize}"
+                 Foreground="{Binding ElementName=uc, Path=Foreground}"
+                 FontWeight="{Binding ElementName=uc, Path=FontWeight}"
+                 FontFamily="{Binding ElementName=uc, Path=FontFamily}">
         </TextBox>
-
 
         <icons:PackIconMaterialDesign x:Name="icon"                                          
                                       Grid.Column="1"
                                       Kind="Warning" Foreground="DarkRed"
                                       Padding="5"
-                                      Width="30" Height="30"
-                                      VerticalAlignment="Center" HorizontalAlignment="Center">
-            <icons:PackIconMaterialDesign.ToolTip>
-                <ToolTip Content="" Placement="Top"/>
-            </icons:PackIconMaterialDesign.ToolTip>
+                                      Width="{Binding ElementName=uc, Path=Height}" Height="{Binding ElementName=uc, Path=Height}"
+                                      VerticalAlignment="Center" HorizontalAlignment="Center"
+                                      ToolTip="{Binding ElementName=uc, Path=ErrorText}">
         </icons:PackIconMaterialDesign>
     </Grid>
 </UserControl>
